[gd_scene load_steps=10 format=3 uid="uid://durg1oq6unxov"]

[ext_resource type="Script" path="res://scripts/level_select.gd" id="1_wuv6q"]
[ext_resource type="FontFile" uid="uid://bha54jnrnqo7f" path="res://assets/fonts/PixelOperator8.ttf" id="2_pix1r"]
[ext_resource type="FontFile" uid="uid://plalmr6b48qn" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="3_1ghx4"]
[ext_resource type="Texture2D" uid="uid://t4tb0rao83xq" path="res://assets/sprites/coin.png" id="4_5ddu7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_plg74"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_at8t2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5htri"]
bg_color = Color(0.74698, 0.74698, 0.74698, 1)
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_brb1x"]
bg_color = Color(0.510601, 0.510601, 0.510601, 1)
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sfeuc"]
bg_color = Color(0.27451, 0.529412, 0.560784, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.580392, 0.890196, 0.266667, 1)
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7
shadow_size = 3
anti_aliasing = false

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wuv6q")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_plg74")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -203.0
offset_top = -78.0
offset_right = -18.0
offset_bottom = 147.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Level1" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_pressed_color = Color(0.886275, 0.952941, 0.894118, 1)
theme_override_colors/font_focus_color = Color(0.886275, 0.952941, 0.894118, 1)
theme_override_colors/font_color = Color(0.886275, 0.952941, 0.894118, 1)
theme_override_fonts/font = ExtResource("2_pix1r")
theme_override_font_sizes/font_size = 15
theme_override_styles/focus = SubResource("StyleBoxEmpty_at8t2")
theme_override_styles/hover = SubResource("StyleBoxFlat_5htri")
theme_override_styles/pressed = SubResource("StyleBoxFlat_brb1x")
theme_override_styles/normal = SubResource("StyleBoxFlat_sfeuc")
text = "Level 1"

[node name="Level2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_pressed_color = Color(0.886275, 0.952941, 0.894118, 1)
theme_override_colors/font_focus_color = Color(0.886275, 0.952941, 0.894118, 1)
theme_override_colors/font_color = Color(0.886275, 0.952941, 0.894118, 1)
theme_override_fonts/font = ExtResource("2_pix1r")
theme_override_font_sizes/font_size = 15
theme_override_styles/focus = SubResource("StyleBoxEmpty_at8t2")
theme_override_styles/hover = SubResource("StyleBoxFlat_5htri")
theme_override_styles/pressed = SubResource("StyleBoxFlat_brb1x")
theme_override_styles/normal = SubResource("StyleBoxFlat_sfeuc")
text = "Level 2"

[node name="Level3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_pressed_color = Color(0.886275, 0.952941, 0.894118, 1)
theme_override_colors/font_focus_color = Color(0.886275, 0.952941, 0.894118, 1)
theme_override_colors/font_color = Color(0.886275, 0.952941, 0.894118, 1)
theme_override_fonts/font = ExtResource("2_pix1r")
theme_override_font_sizes/font_size = 15
theme_override_styles/focus = SubResource("StyleBoxEmpty_at8t2")
theme_override_styles/hover = SubResource("StyleBoxFlat_5htri")
theme_override_styles/pressed = SubResource("StyleBoxFlat_brb1x")
theme_override_styles/normal = SubResource("StyleBoxFlat_sfeuc")
text = "Level 3
"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 13.0
offset_top = -78.0
offset_right = 198.0
offset_bottom = 147.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Level4" type="Button" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_pressed_color = Color(0.886275, 0.952941, 0.894118, 1)
theme_override_colors/font_focus_color = Color(0.886275, 0.952941, 0.894118, 1)
theme_override_colors/font_color = Color(0.886275, 0.952941, 0.894118, 1)
theme_override_fonts/font = ExtResource("2_pix1r")
theme_override_font_sizes/font_size = 15
theme_override_styles/focus = SubResource("StyleBoxEmpty_at8t2")
theme_override_styles/hover = SubResource("StyleBoxFlat_5htri")
theme_override_styles/pressed = SubResource("StyleBoxFlat_brb1x")
theme_override_styles/normal = SubResource("StyleBoxFlat_sfeuc")
text = "Level 4"

[node name="Level5" type="Button" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_pressed_color = Color(0.886275, 0.952941, 0.894118, 1)
theme_override_colors/font_focus_color = Color(0.886275, 0.952941, 0.894118, 1)
theme_override_colors/font_color = Color(0.886275, 0.952941, 0.894118, 1)
theme_override_fonts/font = ExtResource("2_pix1r")
theme_override_font_sizes/font_size = 15
theme_override_styles/focus = SubResource("StyleBoxEmpty_at8t2")
theme_override_styles/hover = SubResource("StyleBoxFlat_5htri")
theme_override_styles/pressed = SubResource("StyleBoxFlat_brb1x")
theme_override_styles/normal = SubResource("StyleBoxFlat_sfeuc")
text = "Level 5"

[node name="Level6" type="Button" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_pressed_color = Color(0.886275, 0.952941, 0.894118, 1)
theme_override_colors/font_focus_color = Color(0.886275, 0.952941, 0.894118, 1)
theme_override_colors/font_color = Color(0.886275, 0.952941, 0.894118, 1)
theme_override_fonts/font = ExtResource("2_pix1r")
theme_override_font_sizes/font_size = 15
theme_override_styles/focus = SubResource("StyleBoxEmpty_at8t2")
theme_override_styles/hover = SubResource("StyleBoxFlat_5htri")
theme_override_styles/pressed = SubResource("StyleBoxFlat_brb1x")
theme_override_styles/normal = SubResource("StyleBoxFlat_sfeuc")
text = "Level 6"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.0
offset_top = -141.0
offset_right = 160.0
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_1ghx4")
theme_override_font_sizes/font_size = 29
text = "Select Stage"

[node name="Level1Secret" type="Sprite2D" parent="."]
visible = false
position = Vector2(147, 114)
scale = Vector2(2, 2)
texture = ExtResource("4_5ddu7")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[connection signal="pressed" from="VBoxContainer/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="VBoxContainer/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="VBoxContainer2/Level4" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="VBoxContainer2/Level5" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="VBoxContainer2/Level6" to="." method="_on_exit_pressed"]
